# 2D_shooter_QT

KulSpel/: CMakeLists.txt  bullet.cpp  bullet.h  enemy.cpp  enemy.h  enemybullet.cpp  enemybullet.h  gameview.cpp  gameview.h  healthpickup.cpp  healthpickup.h  main.cpp  player.cpp  player.h  powerup.cpp  powerup.h  soundmanager.cpp  soundmanager.h
